# DeepVibration

./: .gitignore  20250520_time.csv  README.md  pyproject.toml
.VSCodeCounter/2026-01-09_22-41-45/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-01-09_22-42-03/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-01-09_22-42-31/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2026-01-11_17-48-43/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
design/: arch.pptx  内容.docx
matlab/HPGe_signal/: 1.HPGe_signal_Histogram.m  2.HPGe_signal_Scatter.m
matlab/Joint/: 1.HPGe_scatter_Viberation_amplitude.m
matlab/Preprocessor/: 1.bin2rawpulse.m  2.bin2Qtime.m  3.bin2Qmaxtime.m  4.bin_to_RT.m
matlab/Viberation_signal/: 0.Import_from_txt.m  1.All_sensor_correlation.m  2.All_sensor_information.m  3.Vibration_Amplitude_Temperature.m
python/analysis/: __init__.py  parallel.py
python/data/: ch0max-debug.py  ch0max.py  ch0maxdistribution.py  debug_ch2_param.py  fit_ch2_ch3_parallel.py  preprocessor.py
python/examples/: inhibit_selection.py  physical_act_acv.py  pncut_efficiency.py  rt_selection.py
python/scripts/: analyze_signal.py  build_event_feature_umap.py  (+16 more)
src/: makeTreeSimpleDZL_V1725.C
tests/: test_cuts.py  test_event_matrix.py  test_features_io.py  test_hdf5_io.py  test_parallel.py
(+255 files in other folders)
