[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepvibration-analysis"
version = "0.1.0"
description = "Reusable Python analysis tools for DeepVibration HPGe and vibration studies."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "psutil",
    "scipy",
]

[project.optional-dependencies]
signal = ["PyWavelets", "joblib"]
environment = ["pandas"]
ml = ["scikit-learn", "umap-learn", "hdbscan", "threadpoolctl", "joblib"]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["analysis*"]
